# koop-yonetim

./: .dockerignore  .env.example  .gitignore  Dockerfile.frontend  HİSSEDARLAR LİSTESİ.md  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  seed_hissedarlar.sql  svelte.config.js  vite.config.ts
api/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  deploy.md  koop-api.service
api/examples/: hash.rs
api/migrations/: 0001_initial.sql  0002_seed_admin.sql  0003_permissions.sql  0004_kullanici_onay.sql  0005_islem_loglari.sql  0006_tahsilat_iptal.sql
api/src/: errors.rs  mail.rs  main.rs
api/src/auth/: mod.rs
api/src/db/: mod.rs
api/src/models/: mod.rs
api/src/routes/: admin.rs  audit.rs  common.rs  donem.rs  gelir_gider.rs  hisse.rs  hissedar.rs  izin.rs  kasa.rs  kullanici.rs  mod.rs
e2e/: auth.spec.ts  dashboard.spec.ts  helpers.ts  navigation.spec.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: aidat_commands.rs  commands.rs  db.rs  donem_commands.rs  gelir_gider_commands.rs  hisse_commands.rs  hissedar_commands.rs  kasa_commands.rs  lib.rs
src/lib/: Can.svelte  api-client.ts  auth.ts  hissedarFormat.ts  pdf.ts  permissions.ts  tauri-api.ts  toast.ts
src/lib/components/: DataTable.svelte  SearchableSelect.svelte  dataTableUtils.ts
src/routes/: +layout.svelte  +layout.ts
src/routes/(sidebar)/: +layout.svelte  +layout.ts  Navbar.svelte  Sidebar.svelte
src/routes/(sidebar)/borclar/: +page.svelte
src/routes/(sidebar)/dashboard/: +page.svelte
src/routes/(sidebar)/donem/: +page.svelte
src/routes/(sidebar)/gelir-gider/: +page.svelte
src/routes/(sidebar)/hisse/: +page.svelte
src/routes/login/: +page.svelte
tests/: api.sh
(+12 files in other folders)
